generated/MathExprParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 MathExpr.g 2014-12-07 19:10:57

package generated;

import org.antlr.runtime.*;
import org.antlr.runtime.tree.*;

import java.util.HashMap;
import Ast.AstNode;


public class MathExprParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "UNKNOWN", "BLOCK", "PARAMS", "CALL", "CONVERT", "IF", "ELSE", "FOR", "WHILE", "AND", "OR", "NOT", "XOR", "INT_DIV", "INT_MOD", "SHR", "SHL", "IN", "VAR", "RETURN", "ARRAY", "FUNCTION", "PROGRAM", "TRUE", "FALSE", "DO", "COUNT", "WS", "COMMENT", "DIGIT", "LETTER", "NUMBER", "STRING", "IDENTIFIER", "ADD", "SUB", "MUL", "DIV", "BIT_AND", "BIT_OR", "ASSIGN", "NOTEQUALS", "EQUALS", "GT", "LT", "GE", "LE", "'('", "')'", "','", "'{'", "'}'", "';'", "'['", "']'"
    };
    public static final int SHR=19;
    public static final int FUNCTION=25;
    public static final int LT=48;
    public static final int BIT_AND=42;
    public static final int WHILE=12;
    public static final int SHL=20;
    public static final int LETTER=34;
    public static final int FOR=11;
    public static final int DO=29;
    public static final int SUB=39;
    public static final int EQUALS=46;
    public static final int COUNT=30;
    public static final int NOT=15;
    public static final int AND=13;
    public static final int EOF=-1;
    public static final int IF=9;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int IN=21;
    public static final int T__53=53;
    public static final int BIT_OR=43;
    public static final int UNKNOWN=4;
    public static final int T__54=54;
    public static final int IDENTIFIER=37;
    public static final int INT_DIV=17;
    public static final int RETURN=23;
    public static final int VAR=22;
    public static final int DIGIT=33;
    public static final int COMMENT=32;
    public static final int ARRAY=24;
    public static final int ADD=38;
    public static final int PARAMS=6;
    public static final int INT_MOD=18;
    public static final int GE=49;
    public static final int XOR=16;
    public static final int CONVERT=8;
    public static final int ELSE=10;
    public static final int NUMBER=35;
    public static final int NOTEQUALS=45;
    public static final int MUL=40;
    public static final int TRUE=27;
    public static final int WS=31;
    public static final int BLOCK=5;
    public static final int OR=14;
    public static final int ASSIGN=44;
    public static final int GT=47;
    public static final int PROGRAM=26;
    public static final int CALL=7;
    public static final int DIV=41;
    public static final int FALSE=28;
    public static final int LE=50;
    public static final int STRING=36;

    // delegates
    // delegators


        public MathExprParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public MathExprParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[83+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return MathExprParser.tokenNames; }
    public String getGrammarFileName() { return "MathExpr.g"; }


    public static class identifier_return extends ParserRuleReturnScope {
        AstNode tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "identifier"
    // MathExpr.g:70:1: identifier : IDENTIFIER ;
    public final MathExprParser.identifier_return identifier() throws RecognitionException {
        MathExprParser.identifier_return retval = new MathExprParser.identifier_return();
        retval.start = input.LT(1);
        int identifier_StartIndex = input.index();
        AstNode root_0 = null;

        Token IDENTIFIER1=null;

        AstNode IDENTIFIER1_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // MathExpr.g:70:11: ( IDENTIFIER )
            // MathExpr.g:70:13: IDENTIFIER
            {
            root_0 = (AstNode)adaptor.nil();

            IDENTIFIER1=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_identifier980); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENTIFIER1_tree = (AstNode)adaptor.create(IDENTIFIER1);
            adaptor.addChild(root_0, IDENTIFIER1_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (AstNode)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AstNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, identifier_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "identifier"

    public static class group_return extends ParserRuleReturnScope {
        AstNode tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "group"
    // MathExpr.g:72:1: group : ( '(' term ')' | DIGIT | TRUE | FALSE | identifier | call );
    public final MathExprParser.group_return group() throws RecognitionException {
        MathExprParser.group_return retval = new MathExprParser.group_return();
        retval.start = input.LT(1);
        int group_StartIndex = input.index();
        AstNode root_0 = null;

        Token char_literal2=null;
        Token char_literal4=null;
        Token DIGIT5=null;
        Token TRUE6=null;
        Token FALSE7=null;
        MathExprParser.term_return term3 = null;

        MathExprParser.identifier_return identifier8 = null;

        MathExprParser.call_return call9 = null;


        AstNode char_literal2_tree=null;
        AstNode char_literal4_tree=null;
        AstNode DIGIT5_tree=null;
        AstNode TRUE6_tree=null;
        AstNode FALSE7_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // MathExpr.g:72:6: ( '(' term ')' | DIGIT | TRUE | FALSE | identifier | call )
            int alt1=6;
            switch ( input.LA(1) ) {
            case 51:
                {
                alt1=1;
                }
                break;
            case DIGIT:
                {
                alt1=2;
                }
                break;
            case TRUE:
                {
                alt1=3;
                }
                break;
            case FALSE:
                {
                alt1=4;
                }
                break;
            case IDENTIFIER:
                {
                int LA1_5 = input.LA(2);

                if ( (LA1_5==51) ) {
                    alt1=6;
                }
                else if ( (LA1_5==EOF||(LA1_5>=AND && LA1_5<=OR)||(LA1_5>=INT_DIV && LA1_5<=INT_MOD)||(LA1_5>=ADD && LA1_5<=BIT_OR)||(LA1_5>=NOTEQUALS && LA1_5<=LE)||(LA1_5>=52 && LA1_5<=53)||LA1_5==56||LA1_5==58) ) {
                    alt1=5;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 5, input);

                    throw nvae;
                }
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // MathExpr.g:73:3: '(' term ')'
                    {
                    root_0 = (AstNode)adaptor.nil();

                    char_literal2=(Token)match(input,51,FOLLOW_51_in_group990); if (state.failed) return retval;
                    pushFollow(FOLLOW_term_in_group993);
                    term3=term();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, term3.getTree());
                    char_literal4=(Token)match(input,52,FOLLOW_52_in_group995); if (state.failed) return retval;

                    }
                    break;
                case 2 :
                    // MathExpr.g:74:5: DIGIT
                    {
                    root_0 = (AstNode)adaptor.nil();

                    DIGIT5=(Token)match(input,DIGIT,FOLLOW_DIGIT_in_group1002); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    DIGIT5_tree = (AstNode)adaptor.create(DIGIT5);
                    adaptor.addChild(root_0, DIGIT5_tree);
                    }

                    }
                    break;
                case 3 :
                    // MathExpr.g:75:5: TRUE
                    {
                    root_0 = (AstNode)adaptor.nil();

                    TRUE6=(Token)match(input,TRUE,FOLLOW_TRUE_in_group1008); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    TRUE6_tree = (AstNode)adaptor.create(TRUE6);
                    adaptor.addChild(root_0, TRUE6_tree);
                    }

                    }
                    break;
                case 4 :
                    // MathExpr.g:76:5: FALSE
                    {
                    root_0 = (AstNode)adaptor.nil();

                    FALSE7=(Token)match(input,FALSE,FOLLOW_FALSE_in_group1014); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    FALSE7_tree = (AstNode)adaptor.create(FALSE7);
                    adaptor.addChild(root_0, FALSE7_tree);
                    }

                    }
                    break;
                case 5 :
                    // MathExpr.g:77:5: identifier
                    {
                    root_0 = (AstNode)adaptor.nil();

                    pushFollow(FOLLOW_identifier_in_group1020);
                    identifier8=identifier();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, identifier8.getTree());

                    }
                    break;
                case 6 :
                    // MathExpr.g:78:5: call
                    {
                    root_0 = (AstNode)adaptor.nil();

                    pushFollow(FOLLOW_call_in_group1026);
                    call9=call();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, call9.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (AstNode)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AstNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, group_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "group"

    public static class parameters_return extends ParserRuleReturnScope {
        AstNode tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "parameters"
    // MathExpr.g:81:1: parameters : ( term ( ',' term )* )? ;
    public final MathExprParser.parameters_return parameters() throws RecognitionException {
        MathExprParser.parameters_return retval = new MathExprParser.parameters_return();
        retval.start = input.LT(1);
        int parameters_StartIndex = input.index();
        AstNode root_0 = null;

        Token char_literal11=null;
        MathExprParser.term_return term10 = null;

        MathExprParser.term_return term12 = null;


        AstNode char_literal11_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // MathExpr.g:81:11: ( ( term ( ',' term )* )? )
            // MathExpr.g:81:13: ( term ( ',' term )* )?
            {
            root_0 = (AstNode)adaptor.nil();

            // MathExpr.g:81:13: ( term ( ',' term )* )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==NOT||(LA3_0>=TRUE && LA3_0<=FALSE)||LA3_0==DIGIT||LA3_0==IDENTIFIER||LA3_0==51) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // MathExpr.g:81:15: term ( ',' term )*
                    {
                    pushFollow(FOLLOW_term_in_parameters1036);
                    term10=term();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, term10.getTree());
                    // MathExpr.g:81:20: ( ',' term )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==53) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // MathExpr.g:81:21: ',' term
                    	    {
                    	    char_literal11=(Token)match(input,53,FOLLOW_53_in_parameters1039); if (state.failed) return retval;
                    	    pushFollow(FOLLOW_term_in_parameters1042);
                    	    term12=term();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, term12.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (AstNode)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AstNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, parameters_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "parameters"

    public static class call_return extends ParserRuleReturnScope {
        AstNode tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "call"
    // MathExpr.g:83:1: call : identifier '(' parameters ')' -> ^( CALL identifier ^( PARAMS ( parameters )? ) ) ;
    public final MathExprParser.call_return call() throws RecognitionException {
        MathExprParser.call_return retval = new MathExprParser.call_return();
        retval.start = input.LT(1);
        int call_StartIndex = input.index();
        AstNode root_0 = null;

        Token char_literal14=null;
        Token char_literal16=null;
        MathExprParser.identifier_return identifier13 = null;

        MathExprParser.parameters_return parameters15 = null;


        AstNode char_literal14_tree=null;
        AstNode char_literal16_tree=null;
        RewriteRuleTokenStream stream_51=new RewriteRuleTokenStream(adaptor,"token 51");
        RewriteRuleTokenStream stream_52=new RewriteRuleTokenStream(adaptor,"token 52");
        RewriteRuleSubtreeStream stream_parameters=new RewriteRuleSubtreeStream(adaptor,"rule parameters");
        RewriteRuleSubtreeStream stream_identifier=new RewriteRuleSubtreeStream(adaptor,"rule identifier");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // MathExpr.g:83:5: ( identifier '(' parameters ')' -> ^( CALL identifier ^( PARAMS ( parameters )? ) ) )
            // MathExpr.g:83:7: identifier '(' parameters ')'
            {
            pushFollow(FOLLOW_identifier_in_call1056);
            identifier13=identifier();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_identifier.add(identifier13.getTree());
            char_literal14=(Token)match(input,51,FOLLOW_51_in_call1058); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_51.add(char_literal14);

            pushFollow(FOLLOW_parameters_in_call1060);
            parameters15=parameters();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_parameters.add(parameters15.getTree());
            char_literal16=(Token)match(input,52,FOLLOW_52_in_call1062); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_52.add(char_literal16);



            // AST REWRITE
            // elements: parameters, identifier
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AstNode)adaptor.nil();
            // 83:38: -> ^( CALL identifier ^( PARAMS ( parameters )? ) )
            {
                // MathExpr.g:83:41: ^( CALL identifier ^( PARAMS ( parameters )? ) )
                {
                AstNode root_1 = (AstNode)adaptor.nil();
                root_1 = (AstNode)adaptor.becomeRoot((AstNode)adaptor.create(CALL, "CALL"), root_1);

                adaptor.addChild(root_1, stream_identifier.nextTree());
                // MathExpr.g:83:59: ^( PARAMS ( parameters )? )
                {
                AstNode root_2 = (AstNode)adaptor.nil();
                root_2 = (AstNode)adaptor.becomeRoot((AstNode)adaptor.create(PARAMS, "PARAMS"), root_2);

                // MathExpr.g:83:68: ( parameters )?
                if ( stream_parameters.hasNext() ) {
                    adaptor.addChild(root_2, stream_parameters.nextTree());

                }
                stream_parameters.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (AstNode)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AstNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, call_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "call"

    public static class not_logic_return extends ParserRuleReturnScope {
        AstNode tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "not_logic"
    // MathExpr.g:85:1: not_logic : ( group | NOT not_logic );
    public final MathExprParser.not_logic_return not_logic() throws RecognitionException {
        MathExprParser.not_logic_return retval = new MathExprParser.not_logic_return();
        retval.start = input.LT(1);
        int not_logic_StartIndex = input.index();
        AstNode root_0 = null;

        Token NOT18=null;
        MathExprParser.group_return group17 = null;

        MathExprParser.not_logic_return not_logic19 = null;


        AstNode NOT18_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // MathExpr.g:85:10: ( group | NOT not_logic )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0>=TRUE && LA4_0<=FALSE)||LA4_0==DIGIT||LA4_0==IDENTIFIER||LA4_0==51) ) {
                alt4=1;
            }
            else if ( (LA4_0==NOT) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // MathExpr.g:85:14: group
                    {
                    root_0 = (AstNode)adaptor.nil();

                    pushFollow(FOLLOW_group_in_not_logic1088);
                    group17=group();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, group17.getTree());

                    }
                    break;
                case 2 :
                    // MathExpr.g:85:22: NOT not_logic
                    {
                    root_0 = (AstNode)adaptor.nil();

                    NOT18=(Token)match(input,NOT,FOLLOW_NOT_in_not_logic1092); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    NOT18_tree = (AstNode)adaptor.create(NOT18);
                    root_0 = (AstNode)adaptor.becomeRoot(NOT18_tree, root_0);
                    }
                    pushFollow(FOLLOW_not_logic_in_not_logic1095);
                    not_logic19=not_logic();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, not_logic19.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (AstNode)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AstNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, not_logic_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "not_logic"

    public static class multiplex_return extends ParserRuleReturnScope {
        AstNode tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "multiplex"
    // MathExpr.g:87:1: multiplex : not_logic ( ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not_logic )* ;
    public final MathExprParser.multiplex_return multiplex() throws RecognitionException {
        MathExprParser.multiplex_return retval = new MathExprParser.multiplex_return();
        retval.start = input.LT(1);
        int multiplex_StartIndex = input.index();
        AstNode root_0 = null;

        Token set21=null;
        MathExprParser.not_logic_return not_logic20 = null;

        MathExprParser.not_logic_return not_logic22 = null;


        AstNode set21_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }
            // MathExpr.g:87:10: ( not_logic ( ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not_logic )* )
            // MathExpr.g:87:13: not_logic ( ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not_logic )*
            {
            root_0 = (AstNode)adaptor.nil();

            pushFollow(FOLLOW_not_logic_in_multiplex1104);
            not_logic20=not_logic();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, not_logic20.getTree());
            // MathExpr.g:87:23: ( ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not_logic )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=INT_DIV && LA5_0<=INT_MOD)||(LA5_0>=MUL && LA5_0<=BIT_AND)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // MathExpr.g:87:25: ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not_logic
            	    {
            	    set21=(Token)input.LT(1);
            	    set21=(Token)input.LT(1);
            	    if ( (input.LA(1)>=INT_DIV && input.LA(1)<=INT_MOD)||(input.LA(1)>=MUL && input.LA(1)<=BIT_AND) ) {
            	        input.consume();
            	        if ( state.backtracking==0 ) root_0 = (AstNode)adaptor.becomeRoot((AstNode)adaptor.create(set21), root_0);
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_not_logic_in_multiplex1131);
            	    not_logic22=not_logic();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, not_logic22.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (AstNode)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AstNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 6, multiplex_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "multiplex"

    public static class add_return extends ParserRuleReturnScope {
        AstNode tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "add"
    // MathExpr.g:89:1: add : multiplex ( ( ADD | SUB | BIT_OR ) multiplex )* ;
    public final MathExprParser.add_return add() throws RecognitionException {
        MathExprParser.add_return retval = new MathExprParser.add_return();
        retval.start = input.LT(1);
        int add_StartIndex = input.index();
        AstNode root_0 = null;

        Token set24=null;
        MathExprParser.multiplex_return multiplex23 = null;

        MathExprParser.multiplex_return multiplex25 = null;


        AstNode set24_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return retval; }
            // MathExpr.g:89:4: ( multiplex ( ( ADD | SUB | BIT_OR ) multiplex )* )
            // MathExpr.g:89:8: multiplex ( ( ADD | SUB | BIT_OR ) multiplex )*
            {
            root_0 = (AstNode)adaptor.nil();

            pushFollow(FOLLOW_multiplex_in_add1145);
            multiplex23=multiplex();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, multiplex23.getTree());
            // MathExpr.g:89:19: ( ( ADD | SUB | BIT_OR ) multiplex )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=ADD && LA6_0<=SUB)||LA6_0==BIT_OR) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // MathExpr.g:89:21: ( ADD | SUB | BIT_OR ) multiplex
            	    {
            	    set24=(Token)input.LT(1);
            	    set24=(Token)input.LT(1);
            	    if ( (input.LA(1)>=ADD && input.LA(1)<=SUB)||input.LA(1)==BIT_OR ) {
            	        input.consume();
            	        if ( state.backtracking==0 ) root_0 = (AstNode)adaptor.becomeRoot((AstNode)adaptor.create(set24), root_0);
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_multiplex_in_add1165);
            	    multiplex25=multiplex();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, multiplex25.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (AstNode)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AstNode)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 7, add_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "add"

    public static class compare_return extends ParserRuleReturnScope {
        AstNode tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "compare"
    // MathExpr.g:91:1: compare : add ( ( GE | LE | NOTEQUALS | EQUALS | GT | LT ) add )? ;
    public final MathExprParser.compare_return compare() throws RecognitionException {
        MathExprParser.compare_return retval = new MathExprParser.compare_return();
        retval.start = input.LT(1);
        int compare_StartIndex = input.index();
        AstNode root_0 = null;

        Token set27=null;
        MathExprParser.add_return add26 = null;

        MathExprParser.add_return add28 = null;


        AstNode set27_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return retval; }
            // MathExpr.g:91:8: ( add ( ( GE | LE | NOTEQUALS | EQUALS | GT | LT ) add )? )
            // MathExpr.g:91:10: add ( ( GE | LE | NOTEQUALS | EQUALS | GT | LT ) add )?
            {
            root_0 = (AstNode)adaptor.nil();

            pushFollow(FOLLOW_add_in_compare1195);
            add26=add();
